# papers-tools-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: push.yml
src/: crypto.rs  io_ext.rs  main.rs  read_ext.rs
src/command/: mod.rs  pack.rs  revert.rs  unpack.rs
src/command/patch/: assets_patcher.rs  audio_patcher.rs  locale_patcher.rs  mod.rs  xml_patcher.rs
src/sub/: pack.rs  unpack.rs
src/unity/: audio.rs  mod.rs  util.rs
