[package]
name = "papers-tools"
version = "1.0.4"
edition = "2021"
authors = ["creepycode"]

[dependencies]
md5 = "0.7.0"
haxeformat = "0.2.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
clap = "4.5.13"
clap_derive = "4.5.13"
walkdir = "2.5.0"
thiserror = "1.0.58"
anyhow = "1.0.86"
zip = "2.1.6"
byteorder = "1.5.0"
binrw = "0.14.0"
rand = "0.8.5"
roxmltree = "0.20.0"
xml-rs = "0.8.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
time = { version = "0.3.36", features = ["local-offset"] }

[profile.release]
strip = true
opt-level = "z"
lto = true